--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #0F0A3C;
     font-size: .875rem;
   }
   
@@ -11,25 +12,36 @@ body {
    * Sidebar
    */
   
-  .sidebar {
+   .sidebar {
+    flex-shrink: 0;
+    width: 18%; /* Adjust this based on your sidebar width */
+    height: 100vh;
+    background-color: #f8f9fa;
     position: fixed;
     top: 0;
-    /* rtl:raw:
-    right: 0;
-    */
-    bottom: 0;
-    /* rtl:remove */
     left: 0;
-    z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   }
   
-  @media (max-width: 767.98px) {
+  .header {
+    position: fixed;
+    top: 0;
+    left: 240px; /* Same width as sidebar */
+    right: 0;
+    z-index: 1000;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-radius: 30px;
+    overflow: hidden;
+  }
+  
+  /* @media (max-width: 767.98px) {
     .sidebar {
       top: 5rem;
     }
-  }
+  } */
   
   .sidebar-sticky {
     height: calc(100vh - 48px);
@@ -38,6 +50,9 @@ body {
   }
   
   .sidebar .nav-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 500;
     color: #333;
   }
@@ -48,6 +63,7 @@ body {
   }
   
   .sidebar .nav-link.active {
+    justify-content: center;
     color: #2470dc;
   }
   
@@ -56,6 +72,11 @@ body {
     color: inherit;
   }
   
+  .sidebar .profile-name {
+    display:flex;
+    justify-content: center;
+  }
+
   .sidebar-heading {
     font-size: .75rem;
   }
@@ -94,4 +115,17 @@ body {
   .form-control-dark:focus {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+  }
+
+  .content {
+    padding-top: 50px; /* Adjust based on the header height */
+  }
+
+  .h2-styled {
+    color: white;;
+    padding: 5px 20px;         /* Padding around the text */
+  }
+
+  .white-label {
+    color: white;
   }
