--- a/frontend/src/css/addQuestion.css
+++ b/frontend/src/css/addQuestion.css
@@ -19,3 +19,15 @@
 .categoryButton:hover {
     background-color: lightblue;
 }
+
+.add-button button.btn {
+    background-color: #ffffff;
+    color: black;
+    font-size: 20px;
+}
+
+.add-button button.btn:hover {
+    background-color: #d6d6d6;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+}
