--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -6,6 +6,12 @@
   background-color: white; /* Default user background */
 }
   
+/* Example CSS to hide the scrollbar */
+html {
+  overflow: -moz-hidden; /* Firefox */
+  overflow: hidden; /* Other browsers */
+}
+
   .feather {
     width: 16px;
     height: 16px;
