--- a/frontend/src/css/sidebar.css
+++ b/frontend/src/css/sidebar.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: start; /* Start items vertically */
   align-items: center; /* Center items horizontally */
-  padding: 10px 0; /* Inner padding */
+  padding: 10px 0px; /* Inner padding */
   box-sizing: border-box; /* Include padding in width calculation */
   overflow-y: auto; /* Scroll if content overflows */
 }
@@ -35,7 +35,7 @@
   cursor: pointer; /* Show pointer cursor on hover */
 }
 
-.user-icon {
+.admin-icon {
   width: 60px;
   height: 60px;
 }
@@ -125,4 +125,27 @@ nav button.btn {
 nav button.btn:hover {
   color: white;
   background-color: rgb(211, 65, 12);
+}
+
+.users-container {
+  text-decoration: none; /* Remove underline */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 20px;
+  margin-top: 35px;
+  background-color: transparent; /* Initial background color */
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
+}
+
+.users-container:hover {
+  text-decoration: none; 
+  background-color: #f0f0f0; /* Change to your desired background color on hover */
+  cursor: pointer; /* Show pointer cursor on hover */
+}
+
+.users-icon {
+  width: 40px;
+  height: 40px;
 }
