--- a/frontend/src/css/authBox.css
+++ b/frontend/src/css/authBox.css
@@ -1,8 +1,8 @@
 .authContainer {
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     margin: 0 auto;
-    padding: 40px;
+    padding: 20px;
     background-color: white;
     border-color: #000000;
     border-radius: 10px;
@@ -10,25 +10,40 @@
     
   }
 
-
-  h2 {
-    font-size: 24px;
+  h1 {
+    font-size: 25px;
     color: #171347;
     margin-bottom: 10px;
   }
   
+  p {
+    font-size: 12px;
+  }
   p.text-muted {
+    font-size: 14px;
     color: #6c757d;
   }
   
-  form {
-    width: 100%;
+  
+  .form-label {
+    font-size: 13px; /* Change to desired size */
+    font-weight: 500; /* Optional: Adjust font weight if needed */
+    color: #333; /* Optional: Change the color */
   }
   
+  /* Style for the input fields */
+  .form-control {
+    font-size: 11px; /* Change input text size */
+    padding: 10px 15px; /* Adjust padding for better spacing */
+    border: 1px solid #ced4da; /* Optional: Border customization */
+    border-radius: 4px; /* Optional: Border radius */
+    color: #495057; /* Text color */
+  }
+
   button.btn {
     background-color: #0F0A3C;
     color: white;
-    font-size: 16px;
+    font-size: 12px;
     border: none;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -45,4 +60,16 @@
   a:hover {
     text-decoration: underline;
   }
+
+  .text-center p {
+    margin-bottom: 1px;
+  }
+  
+
+  
+  
+  
+  
+  
+  
   
